WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266431
REGRESSION (
268616@main
): No context menu preview appears for data detected links in Notes
https://bugs.webkit.org/show_bug.cgi?id=266431
Summary
REGRESSION (268616@main): No context menu preview appears for data detected l...
Wenson Hsieh
Reported
2023-12-14 11:52:35 PST
rdar://119524150
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-12-14 12:26:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21823
EWS
Comment 2
2023-12-14 16:32:40 PST
Committed
272084@main
(8c025b25b577): <
https://commits.webkit.org/272084@main
> Reviewed commits have been landed. Closing PR #21823 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug